--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <meta charset="utf-8">
 <title>My First Bitstarter</title>
 <link type="text/css" rel="stylesheet"
- href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap—2.3.2.css">
- <sty1e type="text/css">
+ href="https://d396qusza40orc.cloudfront.net/startup%2Fcode%2Fbootstrap-2.3.2.css">
+ <style type="text/css">
 body {
 padding—top: 20px;
 padding—bottom: 40px;
@@ -53,12 +53,12 @@ About
 </div>
 <div class="row heading">
 <div class="span12">
-<h1>Bitstarte Title</h1>
+<h1>Bitstarter Title</h1>
 </div>
 </div>
 <div class="subheading">
 <div class="span12">
-<p class="lead">This is my first bitstarter project.</p>
+<p class="lead">This is my first Bitstarter project.</p>
 </div>
 </div>
 <div class="row pitch">
