Added bitcoin preorder button

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
+<a class="coinbase-button" data-code="8d798b3807fed1ed1f628027b2f2fb10" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/8d798b3807fed1ed1f628027b2f2fb10">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
 	  </div>
 	  <div class="row-fluid">
@@ -258,8 +258,8 @@
 	too mainstream! From NATA we want to let you discover the other places,
 	where the locals go out and have fun, the not so famous and overcrowded
 	beaches, that bike route that is only accesible from a unique old road...
-	You are smiling now because this thing is real! this experience is true life, not
-	cloned-all-included-your-bracelet resorts, not a fastfood quality holiday. 
+	If you are smiling now is because this thing is real! this experience is true life, not
+	cloned-all-included-bracelet resorts, this is not about a fastfood quality holiday. 
       
           </p>
         </div>
