Updated web Information

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <script type="text/javascript">
 
   var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-42969288-1']);
+  _gaq.push(['_setAccount', 'UA-43648363-1']);
   _gaq.push(['_trackPageview']);
 
   (function() {
@@ -177,17 +177,17 @@
                 different in horizontal and vertical layouts, illustrating
                 media queries. -->
                 <div class="linediv-l">
-                <h3>1</h3> <p>backers</p>
+                <h3>0</h3> <p>backers</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-c">
-                  <h3>$100</h3> <p>of $10,000</p>
+                  <h3>$0</h3> <p>of $30,000</p>
                 </div>
               </div>
               <div class="span4">
                 <div class="linediv-r">
-                <h3>30</h3> <p>days left</p>
+                <h3>60</h3> <p>days left</p>
                 </div>
               </div>
             </div>
@@ -197,8 +197,8 @@
             <!-- Bootstrap progress bar -->
             <!-- http://twitter.github.io/bootstrap/components.html#progress -->
             <div class="thermometer progress active">
-              <div class="bar bar-success" style="width: 10%;"></div>
-              <div class="bar bar-warning" style="width: 90%;"></div>
+              <div class="bar bar-success" style="width: 0%;"></div>
+              <div class="bar bar-warning" style="width: 100%;"></div>
             </div>
           </div>
 	  </div>
@@ -206,7 +206,7 @@
           <div class="span6 offset3 order">
             <!-- Standard Bootstrap button. -->
             <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-<a class="coinbase-button" data-code="8d798b3807fed1ed1f628027b2f2fb10" data-button-style="custom_large" data-button-text="Preorder with Bitcoin" href="https://coinbase.com/checkouts/8d798b3807fed1ed1f628027b2f2fb10">Preorder With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+<a class="coinbase-button" data-code="276f99cce2c879747e2d2ed285ab3b92" data-button-style="donation_large" href="https://coinbase.com/checkouts/276f99cce2c879747e2d2ed285ab3b92">Donate Bitcoins</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
           </div>
 	  </div>
 	  <div class="row-fluid">
@@ -259,7 +259,9 @@
 	where the locals go out and have fun, the not so famous and overcrowded
 	beaches, that bike route that is only accesible from a unique old road...
 	If you are smiling now is because this thing is real! this experience is true life, not
-	cloned-all-included-bracelet resorts, this is not about a fastfood quality holiday. 
+	cloned-all-included-bracelet resorts, this is not about a fastfood quality holiday. <b>NATA 
+	collaborators</b> are the most important part of the project, because the will help and
+	guide the travelers. For that reason a big percentage of NATA is about to build a Collaborators Network.
       
           </p>
         </div>
@@ -274,40 +276,67 @@
       <div class="row-fluid faq">
           <div class="span10 offset1">
             <h3>FAQ</h3>
-            <div class="accordion" id="accordion2">
+            <div class="accordion" id="faqAccordion">
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseOne">
+                     data-parent="#faqAccordion" href="#what">
                     What does NATA stand for?
                   </a>
                 </div>
-                <div id="collapseOne" class="accordion-body collapse">
+                <div id="what" class="accordion-body collapse">
                   <div class="accordion-inner">
-			Not Another Travel Agency
+			Not Another Travel Agency.
                   </div>
                 </div>
               </div>
               <div class="accordion-group">
                 <div class="accordion-heading">
                   <a class="accordion-toggle" data-toggle="collapse"
-                     data-parent="#accordion2" href="#collapseTwo">
+                     data-parent="#faqAccordion" href="#wedo">
                     What we do?
                   </a>
                 </div>
-                <div id="collapseTwo" class="accordion-body collapse">
+                <div id="wedo" class="accordion-body collapse">
                   <div class="accordion-inner">
 		<ul><li> Because going on a package tour holiday is too mainstream we let you the oportunity to have real customized holidays and feel the real essence of your visited places. </li>
 		<li>We assist you in your fly bookings </li>
 		<li>We recommend good quality and low price accomodation</li>
 		<li>Of course we can do this for you!</li>
-		<li>We also plan trips for festival </li>
+		<li>We also plan trips for festivals </li>
 		<li>We plan dinners, bbqs and parties. </li>
 		<li>We go to that kind of places that you'll never go unless a good friend had recommended and gave you the instructions. That cool places</li>		
 		</ul>
                   </div>
                 </div>
               </div>
+              <div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#faqAccordion" href="#when">
+                    When will be NATA available?
+                  </a>
+                </div>
+                <div id="when" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                       If we reach the budget Nata will be available on the Q1 of 2014.
+                  </div>
+                </div>
+              </div>
+		<div class="accordion-group">
+                <div class="accordion-heading">
+                  <a class="accordion-toggle" data-toggle="collapse"
+                     data-parent="#faqAccordion" href="#money">
+                    Where is going to go your donation?
+                  </a>
+                </div>
+                <div id="money" class="accordion-body collapse">
+                  <div class="accordion-inner">
+                       Basically to feed the NATA programmers and Collaborators, web hosting, enforce the law and finance the advertising which is necesary in this kind of project. 
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
 
@@ -332,9 +361,10 @@
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-42969288-1', 'herokuapp.com');
+  ga('create', 'UA-43648363-1', 'herokuapp.com');
   ga('send', 'pageview');
 
 </script>
+
   </body>
 </html>
